# mcp-tool-factory

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: __init__.py  benchmark.py
docs/: api-reference.md  architecture.md  authentication.md  cli-reference.md  contributing.md  database.md  examples.md  getting-started.md  index.md  openapi.md  production.md  providers.md  security.md  troubleshooting.md
servers/dittomcp/: Dockerfile  EXECUTION_LOG.md  README.md  execution_log.json  pyproject.toml  server.py  skill.md
servers/dittomcp/.github/workflows/: ci.yml
servers/dittomcp/tests/: test_tools.py
src/tool_factory/: __init__.py  agent.py  cli.py  config.py  database.py  execution_logger.py  models.py  openapi.py  production.py  prompts.py  validation.py  web_search.py
src/tool_factory/auth/: __init__.py  oauth2.py  pkce.py  providers.py
src/tool_factory/generators/: __init__.py  docs.py  server.py  tests.py
src/tool_factory/middleware/: __init__.py  validation.py
src/tool_factory/observability/: __init__.py  telemetry.py
src/tool_factory/providers/: __init__.py  anthropic.py  base.py  claude_code.py  factory.py  google.py  openai.py
src/tool_factory/security/: __init__.py  scanner.py
src/tool_factory/templates/: Dockerfile.jinja  pyproject.toml.jinja  server.py.jinja  test.py.jinja
src/tool_factory/utils/: __init__.py  dependencies.py  input_validation.py
tests/: __init__.py  test_agent_comprehensive.py  test_async.py  test_auth.py  test_claude_code_provider.py  test_cli.py  test_cli_comprehensive.py  test_config_comprehensive.py  test_coverage_boost.py  test_database.py  test_dependencies.py  test_docs_comprehensive.py  test_enhanced_test_generator.py  test_error_handling.py  test_execution_logger.py  test_execution_logger_comprehensive.py  test_generators.py  test_input_validation.py  test_integration.py  test_middleware_validation.py  test_models.py  test_models_comprehensive.py  test_observability.py  test_openapi.py  test_production.py  test_providers.py  test_providers_comprehensive.py  test_providers_full.py  test_providers_mocked.py  test_security_scanner.py  test_server_generator_comprehensive.py  test_validation.py  test_validation_comprehensive.py  test_web_search.py
